[package]
name = "projections"
version = "0.2.0"
edition = "2021"
description = "Macro-free pin projections because why not?"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/projections"
homepage = "https://github.com/ardaku/projections/blob/stable/CHANGELOG.md"
repository = "https://github.com/ardaku/projections/"
include = ["Cargo.toml", "src/", "examples/", "README.md"]
keywords = ["pin", "lite", "projection", "safe", "macroless"]
categories = ["asynchronous", "no-std", "rust-patterns", "data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
